# gemini-ats

./: .gitignore  README.md  pyproject.toml
gemini_ats/: .env  app.py
