[tool.poetry]
name = "gemini-ats"
version = "0.1.0"
description = ""
authors = ["Computer <96786190+PiKa919@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
google-generativeai = "^0.6.0"
python-dotenv = "^1.0.1"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
